[package]
name = "backend"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
description = "Backend api's for ishakuni"

[dependencies]
actix-web = "0.6.11"
diesel = { version = "1.3.0", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1"
r2d2 = "0.8.2"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
